# ndn-certification-agent

./: .gitmodules  Cargo.toml  Readme.MD  build.rs  shell.nix
src/: client.rs  command.rs  error.rs  lib.rs  main.rs  metrics.rs  rules.rs  task.rs
src/command/: mod.rs  nfdc.rs  nfdc_report.xml
src/command/ndnsec/: dump.rs  dump.txt  list.rs  list.txt  mod.rs
src/protos/: metrics.rs
