[package]
name = "ndn-certification-agent"
version = "1.0.0"
authors = ["Filippo Berto <berto.f@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1", features = ["attributes", "unstable"]}
async-trait = "0.1"
base64 = "0.13"
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3"
nom = "6.1"
protobuf = "2.18"
thiserror = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde-xml-rs = "0.4"
serde_json = "1"
ctrlc = "*"
systemstat = "0.1"
sysinfo = "0.16"
url = {version= "2.2", features = ["serde"]}

[[bin]]
name = "ca_mut"
path = "bin/ca_mut.rs"

